--- a/Front end/Clase 6/index.html
+++ b/Front end/Clase 6/index.html
@@ -6,51 +6,54 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PetShop</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.1.1/css/all.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
     <header>
-        <section>
-            <center>
-                <span>¡Grandes ofertas en comederos!</span>
-                <span><strong>Español ARG</strong></span>
-            </center>
+        <section id="top">
+            <p>¡Grandes ofertas en comederos!</p>
+            <br>
+            <p><strong>Español ARG$</strong></p>
         </section>
-        <section>
+
+        <section id="logo">
             <picture><img src="img/logo.png" alt="logo"></picture>
             <nav>
                 <ul>
-                    <li>Categorías</li>
-                    <li>Pets</li>
-                    <li>Nosotros</li>
-                    <li>Contactanos</li>
+                    <li><i class="fa-solid fa-paw"></i> Categorías</li>
+                    <li><i class="fa-solid fa-paw"></i> Pets</li>
+                    <li><i class="fa-solid fa-paw"></i> Nosotros</li>
+                    <li><i class="fa-solid fa-paw"></i> Contactanos</li>
                 </ul>
             </nav>
         </section>
     </header>
-    <main>
-        <section>
-            <picture><img src="/Clase 6/img/banner.png" alt="banner"></picture>
-        </section>
-        <section>
 
-            <picture><img src="/Clase 6/img/pata.png" alt="pata"></picture>
+    <main>
+        <section id="sBanner">
+            <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        </section>
+
+        <section id="pata">
+            <picture><img src="/img/pata.png" alt="pata"></picture>
             <h2>Productos Destacados</h2>
             <p>Comederos - Accesorios - Comida</p>
-
         </section>
-        <section>
+
+        <section id="productos">
             <article>
 
-                <picture><img src="/Clase 6/img/foto1.png" alt="primer_producto"></picture>
+                <picture><img src="/img/foto1.png" alt="primer_producto"></picture>
                 <h3>Juguete Churrasquito</h3>
                 <p><strong>$150</strong></p>
 
-                <picture><img src="/Clase 6/img/foto2.png" alt="segundo_producto"></picture>
+                <picture><img src="/img/foto2.png" alt="segundo_producto"></picture>
                 <h3>Comedero para perros</h3>
                 <p><strong>$250</strong></p>
 
-                <picture><img src="/Clase 6/img/foto3.png" alt="tercer_producto"></picture>
+                <picture><img src="/img/foto3.png" alt="tercer_producto"></picture>
                 <h3>Juguete Huesito</h3>
                 <p><strong>$650</strong></p>
 
@@ -59,9 +62,10 @@
     </main>
     <br><br>
     <footer>
-        <center>
-            <p><strong>Todos los derechos reservados Front End</strong></p>
-        </center>
+        <p><strong>Todos los derechos reservados Front End</strong></p>
+        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-brands fa-facebook-f"></i>
+        <i class="fa-solid fa-envelope"></i>
     </footer>
 </body>
 
